changed images Mr. Henshaw requested for

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="headline">
                 <h1>Distinguish <br>your home</h1>
                 <p>Quality doors for every style and budget</p>
-                <a class="brown-btn btn" href="#touch">Get in touch</a>
+                <a class="white-btn btn" href="#touch">Get in touch</a>
             </div>
 
             <div class="contact-info">
@@ -162,9 +162,6 @@
                         <img src="img/IMG_1116 Enterance Door - Edited.webp" alt="">
                     </div>
                     <div class="double-slides fade">
-                        <img src="img/double_door_2.webp" alt="">
-                    </div>
-                    <div class="double-slides fade">
                         <img src="img/IMG_1092 Odere Palour entrance.webp" alt="">
                     </div>
                     <div class="double-slides fade">
@@ -205,9 +202,6 @@
                         <img src="img/glass.webp" alt="">
                     </div>
                     <div class="glass-slides fade">
-                        <img src="img/Living room  with one single leaf interior  flush door without glass insert. The door should be bold to view.webp" alt="">
-                    </div>
-                    <div class="glass-slides fade">
                         <img src="img/20170707_104500 (2).webp" alt="">
                     </div>
                     <div class="glass-slides fade">
@@ -224,9 +218,6 @@
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/Gallery-6.webp" alt="">
-                    </div>
-                    <div class="glass-slides fade">
-                        <img src="img/Untitled-design.webp" alt="">
                     </div>
 
                     <!-- Next and Previous Buttons -->
@@ -248,7 +239,7 @@
             </div>
 
             <div class="product-image">
-                <img src="img/planate.webp" alt="">
+                <img src="img/planate_6.webp" alt="">
             </div>
 
             <!-- Planate Doors Modal -->
@@ -261,9 +252,6 @@
                 <div class="modal-images">
                     <div class="planate-Slides fade">
                         <img src="img/planate_1.webp" alt="">
-                    </div>
-                    <div class="planate-Slides fade">
-                        <img src="img/planate_3.webp" alt="">
                     </div>
                     <div class="planate-Slides fade">
                         <img src="img/planate_4.webp" alt="">
@@ -313,20 +301,20 @@
 
         <div class="gallery-images">
             <div class="g-img">
-                <img src="img/double_door.webp" alt="">
-            </div>
-            <div class="g-img">
-                <img src="img/gallery/1.png" alt="">
+                <img src="img/gallery/3.webp" alt="">
             </div>
             <div class="g-img">
                 <img src="img/gallery/2.jpg" alt="">
+            </div>
+            <div class="g-img">
+                <img src="img/gallery/4.jpg" alt="">
             </div>
             <div class="g-img">
                 <img src="img/gallery/3.jpg" alt="">
             </div>
             <div class="xs-device">
                 <div class="g-img">
-                    <img src="img/gallery/4.jpg" alt="">
+                    <img src="img/gallery/2 Panel Arch White - Edited.jpg" alt="">
                 </div>
                 <div class="g-img">
                     <img src="img/gallery/5.jpg" alt="">
