Images complete upload

--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
                     <div class="molded-Slides fade"><img src="img/IMG_1107 Odere vistors toilet.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/20190509_163424 (1).webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/Untitled design (4).webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/Untitled design (6).webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/3.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/3 Panel Oval Executive Matt.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/2 Panel Arch Glossy White.webp" alt="" /></div>
@@ -126,6 +128,9 @@
                     <div class="molded-Slides fade"><img src="img/10.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/One Panel  Mahogany - Edited.webp" alt="" /></div>
                     <div class="molded-Slides fade"><img src="img/WP_20161124_002[1027].webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/Untitled design (1).webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/Untitled design (4).webp" alt="" /></div>
+                    <div class="molded-Slides fade"><img src="img/Untitled design (3).webp" alt="" /></div>
                     
 
                     <!-- Next and Previous Buttons -->
