new images update done

--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                         <img src="img/IMG_1116 Enterance Door - Edited.webp" alt="">
                     </div>
                     <div class="double-slides fade">
+                        <img src="img/double_two_panel.webp" alt="">
+                    </div>
+                    <div class="double-slides fade">
                         <img src="img/IMG_1092 Odere Palour entrance.webp" alt="">
                     </div>
                     <div class="double-slides fade">
@@ -217,6 +220,9 @@
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/IMG-20190505-WA0001.webp" alt="">
+                    </div>
+                    <div class="glass-slides fade">
+                        <img src="img/glass_insert_double.webp" alt="">
                     </div>
                     <div class="glass-slides fade">
                         <img src="img/6 - Edited.webp" alt="">
@@ -309,7 +315,7 @@
                 <img src="img/gallery/3.webp" alt="">
             </div>
             <div class="g-img">
-                <img src="img/gallery/2.jpg" alt="">
+                <img src="img/gallery/2 Panel Arch Glossy.webp" alt="">
             </div>
             <div class="g-img">
                 <img src="img/gallery/4.jpg" alt="">
