--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
 
                 <div class="modal-images">
                     <div class="glass-slides fade">
+                        <img src="img/glass-insert.webp" alt="">
+                    </div>
+                    <div class="glass-slides fade">
                         <img src="img/glass.webp" alt="">
                     </div>
                     <div class="glass-slides fade">
@@ -262,6 +265,15 @@
 
                 <div class="modal-images">
                     <div class="planate-Slides fade">
+                        <img src="img/planate_2.webp" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_12.webp" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
+                        <img src="img/planate_3.webp" alt="">
+                    </div>
+                    <div class="planate-Slides fade">
                         <img src="img/planate_1.webp" alt="">
                     </div>
                     <div class="planate-Slides fade">
@@ -284,9 +296,6 @@
                     </div>
                     <div class="planate-Slides fade">
                         <img src="img/planate_11.webp" alt="">
-                    </div>
-                    <div class="planate-Slides fade">
-                        <img src="img/planate_12.webp" alt="">
                     </div>
                     <div class="planate-Slides fade">
                         <img src="img/planate_13.webp" alt="">
@@ -312,29 +321,29 @@
 
         <div class="gallery-images">
             <div class="g-img">
-                <img src="img/gallery/3.webp" alt="">
+                <img src="img/gallery/gallery_1.webp" alt="">
             </div>
             <div class="g-img">
-                <img src="img/gallery/2 Panel Arch Glossy.webp" alt="">
+                <img src="img/gallery/gallery_2.webp" alt="">
             </div>
             <div class="g-img">
-                <img src="img/gallery/4.jpg" alt="">
+                <img src="img/gallery/gallery_3.webp" alt="">
             </div>
             <div class="g-img">
-                <img src="img/gallery/3.jpg" alt="">
+                <img src="img/gallery/gallery_4.webp" alt="">
             </div>
             <div class="xs-device">
                 <div class="g-img">
-                    <img src="img/gallery/2 Panel Arch White - Edited.jpg" alt="">
+                    <img src="img/gallery/gallery_5.webp" alt="">
                 </div>
                 <div class="g-img">
-                    <img src="img/gallery/5.jpg" alt="">
+                    <img src="img/gallery/gallery_6.webp" alt="">
                 </div>
                     <div class="g-img">
-                    <img src="img/gallery/6.jpg" alt="">
+                    <img src="img/gallery/gallery_7.webp" alt="">
                 </div>
                 <div class="g-img">
-                    <img src="img/gallery/7.png" alt="">
+                    <img src="img/gallery/gallery_8.webp" alt="">
                 </div>
             </div>
         </div>
