Terms and Conditions correction

--- a/index.html
+++ b/index.html
@@ -242,7 +242,6 @@
 
                 <div class="modal-images">
                     <div class="planate-Slides fade"><img src="img/planate_1.webp" alt=""></div>
-                    <div class="planate-Slides fade"><img src="img/planate_2.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_3.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_4.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_5.webp" alt=""></div>
@@ -251,7 +250,6 @@
                     <div class="planate-Slides fade"><img src="img/planate_8.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_9.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_10.webp" alt=""></div>
-                    <div class="planate-Slides fade"><img src="img/planate_11.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_12.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_13.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_14.webp" alt=""></div>
@@ -356,11 +354,11 @@
         <div id="notice">
             <div id="terms-notice">
                 <div class="notice-title">Service Terms and Conditions:</div>
-                <p>Thank you for your patronage. Please note that payment for this invoice means that you agree to our Terms and Conditions below:</p>
+                <p>Thank you for your patronage. Please note that payment on our invoice means that you agree to our Terms and Conditions below:</p>
                 
                 <ol class="show-list">
                     <li>All payments should be made to SERINYA INTERNATIONAL SERVICES:AC/0055870185: UNION BANK OF NIG PLC</li>
-                    <li>80% deposit is required for all doors and cabinet  orders, and 20% on any completion either wholly or in part, before collection/Installation. Kindly view our Product and Service Information Manual given on request for more details. Full payment is to be made on all accessories and installation charges.</li>
+                    <li>80% deposit is required for all doors and cabinet  orders, and 20% on any completion either wholly or in part, before collection/installation where applicable. Kindly view our Product and Service Information Manual given on request for more details. Full payment is to be made on all accessories and installation charges.</li>
                     <li>Clients are advised to go through this invoice carefully, as refunds are not permitted wholly or in part, nor are changes possible at the commencement of production.</li>
                     <li>Kindly note that all standard and customised Doors and their colours are generic and may show slight variations. Product design may also be upgraded without notice.</li>
                     <li>For information on our standard door specifications, colours, and conditions for installation, please do request for our Product and Service Information Manual.</li>
