Planate images added

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
 
                 <div class="modal-images">
                     <div class="planate-Slides fade"><img src="img/planate_1.webp" alt=""></div>
+                    <div class="planate-Slides fade"><img src="img/planate_2.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_3.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_4.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_5.webp" alt=""></div>
@@ -250,6 +251,7 @@
                     <div class="planate-Slides fade"><img src="img/planate_8.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_9.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_10.webp" alt=""></div>
+                    <div class="planate-Slides fade"><img src="img/planate_11.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_12.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_13.webp" alt=""></div>
                     <div class="planate-Slides fade"><img src="img/planate_14.webp" alt=""></div>
