--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
 
         <div class="product-image">
-          <img src="img/planate_7.webp" alt="" />
+          <img src="img/main_planate_7.webp" alt="" />
         </div>
 
         <!-- Planate Doors Modal -->
