--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <div class="headline">
           <h1>Distinguish <br />your home</h1>
-          <p>Quality doors for every style and budget</p>
+          <p>Quality doors for every taste and budget</p>
           <a class="white-btn btn" href="#touch">Get in touch</a>
         </div>
 
@@ -314,9 +314,6 @@
             </div>
             <div class="glass-slides fade">
               <img src="img/glass_6.webp" alt="" />
-            </div>
-            <div class="glass-slides fade">
-              <img src="img/glass_7.webp" alt="" />
             </div>
             <div class="glass-slides fade">
               <img src="img/glass_8.webp" alt="" />
