Get in touch functionality included

--- a/index.html
+++ b/index.html
@@ -478,16 +478,16 @@
         </div>
       </div>
 
-      <form action="" method="post">
+      <form method="POST" action="https://script.google.com/macros/s/AKfycbzgtNvbd3LZmaZn5gKKeKtywm0uUyYqR_nI1HtjdZOAoqnIyhDQuW1KeVOU5eBW-ARh/exec">
         <div>
-          <label for="email">Email Address:</label>
-          <input type="text" name="email" />
+          <label for="Email">Email Address:</label>
+          <input type="text" name="Email" />
         </div>
         <div>
-          <label for="message">Message:</label>
-          <textarea name="message" id=""></textarea>
+          <label for="Message">Message:</label>
+          <textarea name="Message" id=""></textarea>
         </div>
-        <a href="" class="btn brown-btn">Send Message</a>
+        <button type="submit" class="btn brown-btn">Send Message</button>
       </form>
     </div>
 
