The Get-in-Touch message section has been connected to a Google SpreadSheet

--- a/index.html
+++ b/index.html
@@ -478,10 +478,7 @@
         </div>
       </div>
 
-      <form
-        method="POST"
-        action="https://script.google.com/macros/s/AKfycbzgtNvbd3LZmaZn5gKKeKtywm0uUyYqR_nI1HtjdZOAoqnIyhDQuW1KeVOU5eBW-ARh/exec"
-      >
+      <form method="POST" action="" name="get-in-touch-form">
         <div>
           <label for="Email">Email Address:</label>
           <input type="text" name="Email" />
@@ -490,7 +487,9 @@
           <label for="Message">Message:</label>
           <textarea name="Message" id=""></textarea>
         </div>
-        <button type="submit" class="btn brown-btn">Send Message</button>
+        <button type="submit" value="submit" id="submit" class="btn brown-btn">
+          Send Message
+        </button>
       </form>
     </div>
 
