Typo corrections to Terms of Service

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
               charges.
             </li>
             <li>
-              Clients are advised to go through this invoice carefully, as
+              Clients are advised to go through their invoices carefully, as
               refunds are not permitted wholly or in part, nor are changes
               possible at the commencement of production.
             </li>
@@ -552,8 +552,7 @@
               estimated at 8-12 weeks from date of completed subframe
               installation and measurements were applicable, of which 4 weeks
               complete post tiling is required.This duration may vary with
-              quantity, specifications, clients work levels, factory work load,
-              and other unexpected factors. In the event we are unable to meet
+              quantity, specifications, clients work levels, factory work load and other unexpected factors. In the event we are unable to meet
               your given dates, clients will be duly notified.
             </li>
             <li>
@@ -644,7 +643,7 @@
               >
             </li>
             <li>
-              <b>Calculating Cost: </b>bIf we are shipping your order locally or
+              <b>Calculating Cost: </b>If we are shipping your order locally or
               internationally, your shipping cost will be exactly the same as we
               are charged by whichever shipping company is used to deliver your
               package. Clients are at liberty to arrange for their shipping
