some minor corrections to the Terms of Service

--- a/index.html
+++ b/index.html
@@ -521,8 +521,19 @@
 
           <ol class="show-list">
             <li>
-              All payments should be made to SERINYA INTERNATIONAL
-              SERVICES:AC/0055870185: UNION BANK OF NIG PLC
+              All payments should be made to:
+              <br />&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: 600"
+                >UNION BANK OF NIG PLC</span
+              >
+              <br />&nbsp;&nbsp;&nbsp;&nbsp;Acct. Name:&nbsp;&nbsp;&nbsp;
+              <span style="font-weight: 600"
+                >SERINYA INTERNATIONAL SERVICES</span
+              >
+              <br />&nbsp;&nbsp;&nbsp;&nbsp;Acct.
+              No:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span
+                style="font-weight: 600"
+                >0055870185</span
+              >
             </li>
             <li>
               80% deposit is required for all doors and cabinet orders, and 20%
@@ -552,7 +563,8 @@
               estimated at 8-12 weeks from date of completed subframe
               installation and measurements were applicable, of which 4 weeks
               complete post tiling is required.This duration may vary with
-              quantity, specifications, clients work levels, factory work load and other unexpected factors. In the event we are unable to meet
+              quantity, specifications, clients work levels, factory work load
+              and other unexpected factors. In the event we are unable to meet
               your given dates, clients will be duly notified.
             </li>
             <li>
