--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <!-- (PRODUCT) Molded Panel Doors -->
       <div class="products">
         <div class="product-description">
-          <h2>Molded Panel Doors</h2>
+          <h2 id="gallery_4">Molded Panel Doors</h2>
           <p>
             Molded panel doors, made from durable materials like MDF or
             hardboard, offer a versatile and cost-effective solution for
@@ -212,7 +212,7 @@
       <!-- (PRODUCT) Double Doors -->
       <div class="products">
         <div class="product-description">
-          <h2>Double Doors</h2>
+          <h2 id="gallery_1">Double Doors</h2>
           <p>
             Double doors, often used in grand entrances, combine functionality
             and aesthetics with a wider passage for moving large items. Popular
@@ -272,7 +272,7 @@
       <!-- (PRODUCT) Glass Insert Doors -->
       <div class="products">
         <div class="product-description">
-          <h2>Glass Insert Doors</h2>
+          <h2 id="gallery_3">Glass Insert Doors</h2>
           <p>
             Glass insert doors add sophistication, style, and elegance to any
             space. They brighten interiors by allowing natural light in,
@@ -331,7 +331,7 @@
       <!-- (PRODUCT) Planate Flush Doors -->
       <div class="products">
         <div class="product-description">
-          <h2>Planate Flush Doors</h2>
+          <h2 id="gallery_2">Planate Flush Doors</h2>
           <p>
             Flush doors, favored in modern architecture for their sleek look,
             are made from materials like plywood or MDF. They offer durability,
@@ -417,31 +417,31 @@
       </div>
 
       <div class="gallery-images">
-        <div class="g-img">
+        <a href="#gallery_1" class="g-img">
           <img src="img/gallery/gallery_1.webp" alt="" />
-        </div>
-        <div class="g-img">
+        </a href="#gallery_1">
+        <a href="#gallery_2" class="g-img">
           <img src="img/gallery/gallery_2.webp" alt="" />
-        </div>
-        <div class="g-img">
+        </a>
+        <a href="#gallery_3" class="g-img">
           <img src="img/gallery/gallery_3.webp" alt="" />
-        </div>
-        <div class="g-img">
+        </a>
+        <a href="#gallery_4" class="g-img">
           <img src="img/gallery/gallery_4.webp" alt="" />
-        </div>
+        </a>
         <div class="xs-device">
-          <div class="g-img">
+          <a href="#gallery_2" class="g-img">
             <img src="img/gallery/gallery_5.webp" alt="" />
-          </div>
-          <div class="g-img">
+          </a>
+          <a href="#gallery_1" class="g-img">
             <img src="img/gallery/gallery_6.webp" alt="" />
-          </div>
-          <div class="g-img">
+          </a>
+          <a href="#gallery_1" class="g-img">
             <img src="img/gallery/gallery_7.webp" alt="" />
-          </div>
-          <div class="g-img">
+          </a>
+          <a href="#gallery_3" class="g-img">
             <img src="img/gallery/gallery_8.webp" alt="" />
-          </div>
+          </a>
         </div>
       </div>
     </div>
