--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <li><h4>Mr. Anietie Antia</h4></li>
                 <li><a href="tel:+234.806.612.5576">+234 806 612 5576</a></li>
                 <!--<li><a href="">anietie@sedekdoors.com</a></li>-->
-                <li><a href="">Calabar</a></li>
+                <li class="gray">Calabar</li>
               </ul>
             </div>
 
@@ -59,7 +59,7 @@
                 <li><h4>Mr. Uche Chima</h4></li>
                 <li><a href="tel:+234.706.892.0523">+234 706 892 0523</a></li>
                 <!--<li><a href="">uche.chima@sedekdoors.com</a></li>-->
-                <li><a href="">Lagos</a></li>
+                <li class="gray">Lagos</li>
               </ul>
             </div>
 
@@ -71,7 +71,7 @@
                 <li><h4>Mr. Brown Sunday</h4></li>
                 <li><a href="tel:+234.706.713.6214">+234 706 713 6214</a></li>
                 <!--<li><a href="">uche.chima@sedekdoors.com</a></li>-->
-                <li><a href="">Port Harcourt</a></li>
+                <li class="gray">Port Harcourt</li>
               </ul>
             </div>
           </div>
@@ -79,7 +79,15 @@
 
         <div class="headline">
           <h1>Distinguish <br />your home</h1>
-          <p>Quality doors for every taste and budget</p>
+          <p>
+            <b
+              ><i
+                >Quality doors for homes, tailored to your
+                <br class="lg-screen" />
+                tatse and budget</i
+              ></b
+            >
+          </p>
           <a class="white-btn btn" href="#touch">Get in touch</a>
         </div>
 
