tagline edited done

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <i
               >Quality doors for homes, tailored to your
               <br class="lg-screen" />
-              tatse and budget</i
+              taste and budget</i
             >
           </p>
           <a class="white-btn btn" href="#touch">Get in touch</a>
